--- a/Khabibullin_Glazkisafe/Khabibullin_Glazkisafe.csproj
+++ b/Khabibullin_Glazkisafe/Khabibullin_Glazkisafe.csproj
@@ -102,6 +102,9 @@
     <Compile Include="ProductType.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="SelfWindow.xaml.cs">
+      <DependentUpon>SelfWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Shop.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -134,6 +137,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SelfWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Manager.cs" />
